@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.11.4 ChangeLog</title>
+		<title>Version 4.11.5 ChangeLog</title>
 		<style type="text/css">
             .auto-style1 {
 	            text-decoration: underline;
@@ -10,7 +10,10 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse-4.11.4</span>
+            <br /><span class="auto-style1">Pulse-4.11.5</span>
+            <br />  Pulse-4.11.5
+            <br />  * In AdcpSubsystemCommands, changed the CepoIndex in the command to a Hex value.
+            <br />
             <br />  Pulse-4.11.4
             <br />  * Updated bug in Prediction Model for Narrowband Max Velocity.
             <br />  * In PredictionModel, updated the number of elements in E0000014.
@@ -149,7 +152,10 @@
             <br />   - In ScreenDataViewModel, added FillInMissingWpData() to fill in data when Water Profile is turned off.
             <br />   - Change the images in PlaybackView.xaml to VisualBrushes.  This decreased startup time dramatically.
             <br />   - In DistanceTraveled, in AccumulateGps() verify a good _FirstGpsPos is set.
-            <br /><span class="auto-style1">RTI-3.4.7</span>
+            <br /><span class="auto-style1">RTI-3.4.8</span>
+            <br />   RTI-3.4.8
+            <br />   * In AdcpSubsystemCommands, changed the CepoIndex in the command to a Hex value.
+            <br />
             <br />   RTI-3.4.7
             <br />   * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
             <br />   * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
